@@ -137,7 +137,7 @@ afa257047d1941a565216edbf0171e72  libarchive-3.2.1.tar.gz
 b2e13142bbaba857ab1c6894aedaf547  libpcap-1.7.4.tar.gz
 ded45b4e3f8a0b6fd54c75ab2d36198f  iperf2-2.0.9.tar.gz
 cd7179eff62b2cc5f0567ac5c70e5047  iperf3-3.1.3.tar.gz
-85577efe8f95db959dad7daf7d63faff  linux-4.9.0-rc2.tar.xz
+04103252254fc8954d1061cd7ea7c9ac  linux-4.9.0-rc3.tar.xz
 7acec816283b96392b41594606d1a637  mhvtl-1.5-3_release.tar.gz
 bf5a283c07b12f0a75d17f09674a73a7  EnhanceIO-master_20151029.tar.gz
 041c5c6de2c3066600e4ca646c2397d6  makedumpfile-1.6.0.tar.gz
